[package]
name = "port_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["net", "sync", "time", "rt-multi-thread", "macros"]}
anyhow = "1.0.102"
indicatif = "0.18.4"

[package]
license = "MIT OR Apache-2.0"
